--- a/style.css
+++ b/style.css
@@ -189,9 +189,12 @@ main {
     text-align: center;
     z-index: 1;
     position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
 }
 
-.journal > h2 {
+.journal h2 {
     display: inline-block;
     padding: 10px;
     margin-bottom: 10px;
@@ -218,7 +221,7 @@ main {
     bottom: 0;
     right: 0;
     z-index: -1;
-    background-color: #09a152;
+    background-color: #25673f;
     transform: scaleX(0.01);
     transform-origin: left;
     transition: transform 0.25s;
@@ -231,4 +234,20 @@ main {
 u {
     font-weight: 600;
     color: #3af281;
+}
+
+.img {
+    padding: 10px;
+}
+
+.img img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+    height: 100%;
+    margin: 0 20px;
+}
+
+#j6 .img img {
+    object-position: -300px 35px;
 }
